// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details Page loader shows correctly 1`] = `
<div>
  <div
    class="pf-l-bullseye"
  >
    <span
      aria-label="Contents"
      aria-valuetext="Loading..."
      class="pf-c-spinner pf-m-xl"
      role="progressbar"
    >
      <span
        class="pf-c-spinner__clipper"
      />
      <span
        class="pf-c-spinner__lead-ball"
      />
      <span
        class="pf-c-spinner__tail-ball"
      />
    </span>
  </div>
</div>
`;

exports[`Details Page redirects when can't read products 1`] = `<div />`;

exports[`Details Page renders data 1`] = `
<div>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
      data-ouia-component-type="PF4/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-c-breadcrumb__list"
      >
        <li
          class="pf-c-breadcrumb__item"
        >
          <a
            href="/"
          >
            Subscription Inventory
          </a>
        </li>
        <li
          class="pf-c-breadcrumb__item"
        >
          <span
            class="pf-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          TEST Name
           
        </li>
      </ol>
    </nav>
    <h1
      class="pf-c-title pf-m-2xl"
      data-ouia-component-id="OUIA-Generated-Title-1"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe="true"
      widget-type="InsightsPageHeaderTitle"
    >
      TEST Name
    </h1>
    <ul
      class="pf-c-list pf-m-plain"
    >
      <li
        class="pf-u-mt-md"
      >
        <b>
          SKU: 
        </b>
        TESTSKU
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Quantity: 
        </b>
        3
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Support level: 
        </b>
        TEST serviceLevel
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Support type: 
        </b>
        TEST serviceType
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Unit of Measure: 
        </b>
        test
         
        <span
          class="pf-c-badge pf-m-read"
        >
          2
        </span>
      </li>
    </ul>
  </section>
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <article
      class="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      id=""
    >
      <div
        class="pf-c-card__title"
      >
        Subscription Details
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-flex pf-m-column pf-m-row-on-md pf-m-justify-content-space-between"
        >
          <div
            class=""
          >
            <div
              class="pf-c-text-input-group"
            >
              <div
                class="pf-c-text-input-group__main pf-m-icon"
              >
                <span
                  class="pf-c-text-input-group__text"
                >
                  <span
                    class="pf-c-text-input-group__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                      />
                    </svg>
                  </span>
                  <input
                    aria-label="Search input"
                    class="pf-c-text-input-group__text-input"
                    placeholder="Filter by subscription or contract number"
                    type="text"
                    value=""
                  />
                </span>
              </div>
              
            </div>
          </div>
          <div
            class="pf-m-align-right"
          >
            <div
              class="pf-c-pagination"
              data-ouia-component-id="OUIA-Generated-Pagination-top-1"
              data-ouia-component-type="PF4/Pagination"
              data-ouia-safe="true"
              id="pagination-options-menu-0"
              style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
            >
              <div
                class="pf-c-pagination__total-items"
              >
                <b>
                  1
                   - 
                  1
                </b>
                 
                of
                 
                <b>
                  1
                </b>
                 
                
              </div>
              <div
                class="pf-c-options-menu"
                data-ouia-component-type="PF4/PaginationOptionsMenu"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
                >
                  <span
                    class="pf-c-options-menu__toggle-text"
                  >
                    <b>
                      1
                       - 
                      1
                    </b>
                     
                    of
                     
                    <b>
                      1
                    </b>
                     
                    
                  </span>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="Items per page"
                    class="  pf-c-options-menu__toggle-button"
                    data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
                    data-ouia-component-type="PF4/DropdownToggle"
                    data-ouia-safe="true"
                    id="pagination-options-menu-toggle-0"
                    type="button"
                  >
                    <span
                      class="pf-c-options-menu__toggle-button-icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <nav
                aria-label="Pagination"
                class="pf-c-pagination__nav"
              >
                <div
                  class="pf-c-pagination__nav-control pf-m-first"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to first page"
                    class="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="first"
                    data-ouia-component-id="OUIA-Generated-Button-plain-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-c-pagination__nav-control"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to previous page"
                    class="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="previous"
                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-c-pagination__nav-page-select"
                >
                  <input
                    aria-label="Current page"
                    class="pf-c-form-control"
                    disabled=""
                    max="1"
                    min="1"
                    type="number"
                    value="1"
                  />
                  <span
                    aria-hidden="true"
                  >
                    of
                     
                    1
                  </span>
                </div>
                <div
                  class="pf-c-pagination__nav-control"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to next page"
                    class="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="next"
                    data-ouia-component-id="OUIA-Generated-Button-plain-3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-c-pagination__nav-control pf-m-last"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to last page"
                    class="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="last"
                    data-ouia-component-id="OUIA-Generated-Button-plain-4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                      />
                    </svg>
                  </button>
                </div>
              </nav>
            </div>
          </div>
        </div>
        <table
          aria-label="subscriptions"
          class="pf-c-table pf-m-grid-md pf-m-compact"
          data-ouia-component-id="OUIA-Generated-Table-1"
          data-ouia-component-type="PF4/Table"
          data-ouia-safe="true"
          role="grid"
        >
          <thead
            class=""
          >
            <tr
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-1"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <th
                aria-sort="ascending"
                class="pf-c-table__sort pf-m-selected pf-m-width-25"
                scope="col"
              >
                <button
                  class="pf-c-table__button"
                  type="button"
                >
                  <div
                    class="pf-c-table__button-content"
                  >
                    <span
                      class="pf-c-table__text"
                    >
                      Subscription number
                    </span>
                    <span
                      class="pf-c-table__sort-indicator"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </th>
              <th
                aria-sort="none"
                class="pf-c-table__sort pf-m-width-20"
                scope="col"
              >
                <button
                  class="pf-c-table__button"
                  type="button"
                >
                  <div
                    class="pf-c-table__button-content"
                  >
                    <span
                      class="pf-c-table__text"
                    >
                      Contract number
                    </span>
                    <span
                      class="pf-c-table__sort-indicator"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </th>
              <th
                aria-sort="none"
                class="pf-c-table__sort pf-m-width-25"
                scope="col"
              >
                <button
                  class="pf-c-table__button"
                  type="button"
                >
                  <div
                    class="pf-c-table__button-content"
                  >
                    <span
                      class="pf-c-table__text"
                    >
                      Subscription quantity
                    </span>
                    <span
                      class="pf-c-table__sort-indicator"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </th>
              <th
                aria-sort="none"
                class="pf-c-table__sort pf-m-width-15"
                scope="col"
              >
                <button
                  class="pf-c-table__button"
                  type="button"
                >
                  <div
                    class="pf-c-table__button-content"
                  >
                    <span
                      class="pf-c-table__text"
                    >
                      Start date
                    </span>
                    <span
                      class="pf-c-table__sort-indicator"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </th>
              <th
                aria-sort="none"
                class="pf-c-table__sort pf-m-width-15"
                scope="col"
              >
                <button
                  class="pf-c-table__button"
                  type="button"
                >
                  <div
                    class="pf-c-table__button-content"
                  >
                    <span
                      class="pf-c-table__text"
                    >
                      End date
                    </span>
                    <span
                      class="pf-c-table__sort-indicator"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            class=""
            role="rowgroup"
          >
            <tr
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-2"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <td
                class=""
                data-label="Subscription number"
              >
                1234
              </td>
              <td
                class=""
                data-label="Contract number"
              >
                2345
              </td>
              <td
                class=""
                data-label="Subscription quantity"
              >
                1
              </td>
              <td
                class=""
                data-label="Start date"
              >
                2021-10-24
              </td>
              <td
                class=""
                data-label="End date"
              >
                2022-10-24
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </article>
  </section>
</div>
`;

exports[`Details Page renders not available for missing data 1`] = `
<div>
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <nav
      aria-label="Breadcrumb"
      class="pf-c-breadcrumb"
      data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
      data-ouia-component-type="PF4/Breadcrumb"
      data-ouia-safe="true"
    >
      <ol
        class="pf-c-breadcrumb__list"
      >
        <li
          class="pf-c-breadcrumb__item"
        >
          <a
            href="/"
          >
            Subscription Inventory
          </a>
        </li>
        <li
          class="pf-c-breadcrumb__item"
        >
          <span
            class="pf-c-breadcrumb__item-divider"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
          
           
        </li>
      </ol>
    </nav>
    <h1
      class="pf-c-title pf-m-2xl"
      data-ouia-component-id="OUIA-Generated-Title-1"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe="true"
      widget-type="InsightsPageHeaderTitle"
    />
    <ul
      class="pf-c-list pf-m-plain"
    >
      <li
        class="pf-u-mt-md"
      >
        <b>
          SKU: 
        </b>
        Not Available
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Quantity: 
        </b>
        0
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Support level: 
        </b>
        Not Available
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Support type: 
        </b>
        Not Available
      </li>
      <li
        class="pf-u-mt-0"
      >
        <b>
          Unit of Measure: 
        </b>
        Not Available
      </li>
    </ul>
  </section>
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <article
      class="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      id=""
    >
      <div
        class="pf-c-card__title"
      >
        Subscription Details
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-l-flex pf-m-column pf-m-row-on-md pf-m-justify-content-space-between"
        >
          <div
            class=""
          />
          <div
            class="pf-m-align-right"
          >
            <div
              class="pf-c-pagination"
              data-ouia-component-id="OUIA-Generated-Pagination-top-1"
              data-ouia-component-type="PF4/Pagination"
              data-ouia-safe="true"
              id="pagination-options-menu-1"
              style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
            >
              <div
                class="pf-c-pagination__total-items"
              >
                <b>
                  0
                   - 
                  0
                </b>
                 
                of
                 
                <b>
                  0
                </b>
                 
                
              </div>
              <div
                class="pf-c-options-menu"
                data-ouia-component-type="PF4/PaginationOptionsMenu"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
                >
                  <span
                    class="pf-c-options-menu__toggle-text"
                  >
                    <b>
                      0
                       - 
                      0
                    </b>
                     
                    of
                     
                    <b>
                      0
                    </b>
                     
                    
                  </span>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="Items per page"
                    class="  pf-c-options-menu__toggle-button"
                    data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
                    data-ouia-component-type="PF4/DropdownToggle"
                    data-ouia-safe="true"
                    id="pagination-options-menu-toggle-1"
                    type="button"
                  >
                    <span
                      class="pf-c-options-menu__toggle-button-icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <nav
                aria-label="Pagination"
                class="pf-c-pagination__nav"
              >
                <div
                  class="pf-c-pagination__nav-control pf-m-first"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to first page"
                    class="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="first"
                    data-ouia-component-id="OUIA-Generated-Button-plain-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-c-pagination__nav-control"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to previous page"
                    class="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="previous"
                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-c-pagination__nav-page-select"
                >
                  <input
                    aria-label="Current page"
                    class="pf-c-form-control"
                    disabled=""
                    max="0"
                    min="1"
                    type="number"
                    value="0"
                  />
                  <span
                    aria-hidden="true"
                  >
                    of
                     
                    0
                  </span>
                </div>
                <div
                  class="pf-c-pagination__nav-control"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to next page"
                    class="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="next"
                    data-ouia-component-id="OUIA-Generated-Button-plain-3"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-c-pagination__nav-control pf-m-last"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to last page"
                    class="pf-c-button pf-m-plain pf-m-disabled"
                    data-action="last"
                    data-ouia-component-id="OUIA-Generated-Button-plain-4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                      />
                    </svg>
                  </button>
                </div>
              </nav>
            </div>
          </div>
        </div>
        <table
          aria-label="subscriptions"
          class="pf-c-table pf-m-grid-md pf-m-compact"
          data-ouia-component-id="OUIA-Generated-Table-1"
          data-ouia-component-type="PF4/Table"
          data-ouia-safe="true"
          role="grid"
        >
          <thead
            class=""
          >
            <tr
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-1"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <th
                aria-sort="ascending"
                class="pf-c-table__sort pf-m-selected pf-m-width-25"
                scope="col"
              >
                <button
                  class="pf-c-table__button"
                  type="button"
                >
                  <div
                    class="pf-c-table__button-content"
                  >
                    <span
                      class="pf-c-table__text"
                    >
                      Subscription number
                    </span>
                    <span
                      class="pf-c-table__sort-indicator"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </th>
              <th
                aria-sort="none"
                class="pf-c-table__sort pf-m-width-20"
                scope="col"
              >
                <button
                  class="pf-c-table__button"
                  type="button"
                >
                  <div
                    class="pf-c-table__button-content"
                  >
                    <span
                      class="pf-c-table__text"
                    >
                      Contract number
                    </span>
                    <span
                      class="pf-c-table__sort-indicator"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </th>
              <th
                aria-sort="none"
                class="pf-c-table__sort pf-m-width-25"
                scope="col"
              >
                <button
                  class="pf-c-table__button"
                  type="button"
                >
                  <div
                    class="pf-c-table__button-content"
                  >
                    <span
                      class="pf-c-table__text"
                    >
                      Subscription quantity
                    </span>
                    <span
                      class="pf-c-table__sort-indicator"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </th>
              <th
                aria-sort="none"
                class="pf-c-table__sort pf-m-width-15"
                scope="col"
              >
                <button
                  class="pf-c-table__button"
                  type="button"
                >
                  <div
                    class="pf-c-table__button-content"
                  >
                    <span
                      class="pf-c-table__text"
                    >
                      Start date
                    </span>
                    <span
                      class="pf-c-table__sort-indicator"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </th>
              <th
                aria-sort="none"
                class="pf-c-table__sort pf-m-width-15"
                scope="col"
              >
                <button
                  class="pf-c-table__button"
                  type="button"
                >
                  <div
                    class="pf-c-table__button-content"
                  >
                    <span
                      class="pf-c-table__text"
                    >
                      End date
                    </span>
                    <span
                      class="pf-c-table__sort-indicator"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            class=""
            role="rowgroup"
          />
        </table>
      </div>
    </article>
  </section>
</div>
`;
